fix vulnerable to path traversal attack